[gd_scene load_steps=5 format=3 uid="uid://bflv5p5pyq64p"]

[ext_resource type="Script" path="res://Scenes/Characters/Police/Police.gd" id="1_mekxe"]
[ext_resource type="Texture2D" uid="uid://cd1s2woeqcfv7" path="res://Assets/Sprites/alchemist.png" id="2_6f374"]
[ext_resource type="PackedScene" uid="uid://c755fytkpll47" path="res://Components/Navigation/NavigationComponent.tscn" id="3_dcloc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kjeai"]
radius = 61.2944

[node name="Police" type="CharacterBody2D"]
process_mode = 1
y_sort_enabled = true
script = ExtResource("1_mekxe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1, 1)
shape = SubResource("CircleShape2D_kjeai")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.12, 0.12)
texture = ExtResource("2_6f374")

[node name="NavigationComponent" parent="." node_paths=PackedStringArray("character") instance=ExtResource("3_dcloc")]
character = NodePath("..")
speed = 300.0

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="LeaveTimer" type="Timer" parent="."]

[connection signal="navigation_completed" from="NavigationComponent" to="." method="_on_navigation_completed"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timeout"]
[connection signal="timeout" from="LeaveTimer" to="." method="_on_leave_timeout"]
